# digital-commerce

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: pytest.yml
odcnc/: __init__.py  mongo.py  sql.py  xl.py
odcnc/cafe24/: __init__.py  provider.py  urls.py  views.py
tests/: test_sql.py
